--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,5 +5,25 @@
         <item name="android:windowEnterAnimation">@anim/anim_enter_left</item>
         <item name="android:windowExitAnimation">@anim/anim_enter_right</item>
     </style>
-    
+
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- 核心系统栏配置 -->
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+
+        <!-- 强制全屏布局 -->
+        <item name="android:windowLayoutInDisplayCutoutMode">shortEdges</item>
+
+    </style>
+
+    <style name="Widget.TransparentButton" parent="Widget.MaterialComponents.Button">
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:elevation">0dp</item>
+        <item name="android:stateListAnimator">@null</item>
+        <item name="android:textColor">@color/white</item>
+        <!-- 禁用涟漪效果 -->
+        <item name="rippleColor">@android:color/transparent</item>
+    </style>
+
 </resources>
